--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,38 @@
 {
-  "extends": "next/core-web-vitals"
+	"env": {
+		"browser": true,
+		"es2021": true
+	},
+	"extends": [
+		"eslint:recommended",
+		"plugin:react/recommended",
+		"plugin:@typescript-eslint/recommended",
+		"next/core-web-vitals",
+		"prettier"
+	],
+	"parser": "@typescript-eslint/parser",
+	"parserOptions": {
+		"ecmaFeatures": {
+			"jsx": true
+		},
+		"ecmaVersion": "latest",
+		"sourceType": "module"
+	},
+	"plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
+	"rules": {
+		"@next/next/no-img-element": "off",
+		"jsx-a11y/alt-text": "off",
+		"react/display-name": "off",
+		"react/jsx-max-props-per-line": [0, { "maximum": 3 }],
+		"react/prop-types": "error",
+		"@typescript-eslint/no-unused-vars": "off",
+		"no-console": "off",
+		"no-restricted-syntax": [
+			"warn",
+			{
+				"selector": "CallExpression[callee.object.name='console'][callee.property.name!=/^(error)$/]",
+				"message": "Unexpected property on console object was called"
+			}
+		]
+	}
 }
